# Simple-Manual-Map-Injector

./: CMakeLists.txt  TheCruZMMapConfig.cmake.in
Manual Map Injector/: injector.cpp  injector.h
